--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ rocket = "0.4.0"
 blake2 = "0.8.0"
 hex = "0.3.2"
 crypto-mac = "0.7.0"
+storage-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
+pairing = { git = "https://github.com/zkcrypto/pairing", features = ["expose-arith"] }
+rusqlite = "0.16.0"
