--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,24 @@ authors = ["nicola <nicola@users.noreply.github.com>"]
 edition = "2018"
 
 [dependencies]
-rocket = "0.4.0"
+rocket = "0.4"
 blake2 = "0.8.0"
 hex = "0.3.2"
 crypto-mac = "0.7.0"
 storage-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
 pairing = { git = "https://github.com/zkcrypto/pairing", features = ["expose-arith"] }
-rusqlite = "0.16.0"
+diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
+diesel_migrations = "1.3"
+serde = "1.0.84"
+serde_derive = "1.0.84"
+
+[dependencies.rocket_contrib]
+version = "0.4"
+default-features = false
+features = ["diesel_sqlite_pool", "json"]
+
+[dev-dependencies]
+parking_lot = {version = "0.7.1"}
+rand = "0.6.3"
+lazy_static = "1.2.0"
+serde_json = "1.0.34"
