--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,18 +8,31 @@ edition = "2018"
 name = "replication-game-server"
 path = "src/bin/server.rs"
 
+[[bin]]
+name = "replication-game"
+path = "src/bin/game.rs"
+
+
 [dependencies]
 rocket = "0.4"
 blake2 = "0.8.0"
 hex = "0.3.2"
 crypto-mac = "0.7.0"
+filecoin-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
 storage-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
-pairing = { git = "https://github.com/zkcrypto/pairing", features = ["expose-arith"] }
 diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
 diesel_migrations = "1.3"
-serde = "1.0.84"
-serde_derive = "1.0.84"
-failure = "0.1.5"
+failure = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+clap = "2"
+slog = "2.4"
+rand = "0.4"
+sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", branch = "master" }
+
+[dependencies.pairing]
+version = "0.14.2"
+features = ["expose-arith", "u128-support"]
 
 [dependencies.rocket_contrib]
 version = "0.4"
@@ -27,7 +40,6 @@ default-features = false
 features = ["diesel_sqlite_pool", "json"]
 
 [dev-dependencies]
-parking_lot = {version = "0.7.1"}
-rand = "0.6.3"
+parking_lot = "0.7.1"
 lazy_static = "1.2.0"
 serde_json = "1.0.34"
