--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
 diesel_migrations = "1.3"
 serde = "1.0.84"
 serde_derive = "1.0.84"
+failure = "0.1.5"
 
 [dependencies.rocket_contrib]
 version = "0.4"
