--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ clap = "2"
 slog = "2.4"
 rand = "0.4"
 sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", branch = "master" }
+diesel-derive-enum = { version = "0.4.4", features = ["sqlite"] }
+byteorder = "1.2.7"
 
 [dependencies.pairing]
 version = "0.14.2"
