--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ hex = "0.3.2"
 crypto-mac = "0.7.0"
 filecoin-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
 storage-proofs = { git = "ssh://git@github.com/filecoin-project/rust-proofs.git" }
-diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
+diesel = { version = "1.3", features = ["postgres", "r2d2"] }
 diesel_migrations = "1.3"
 failure = "0.1"
 serde = "1.0"
@@ -30,7 +30,7 @@ clap = "2"
 slog = "2.4"
 rand = "0.4"
 sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", branch = "master" }
-diesel-derive-enum = { version = "0.4.4", features = ["sqlite"] }
+diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
 byteorder = "1.2.7"
 
 [dependencies.pairing]
@@ -40,7 +40,7 @@ features = ["expose-arith", "u128-support"]
 [dependencies.rocket_contrib]
 version = "0.4"
 default-features = false
-features = ["diesel_sqlite_pool", "json"]
+features = ["diesel_postgres_pool", "json"]
 
 [dev-dependencies]
 parking_lot = "0.7.1"
