chore: better production configs

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,4 +1,11 @@
 [development]
+address = "localhost"
+port = 8000
 
 [development.databases]
 leaderboard = { url = "postgresql://fil@localhost/leaderboard_dev" }
+
+[production]
+address = "0.0.0.0"
+workers = 2
+port = 80
