--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "replication-game"
 version = "0.1.0"
 authors = ["nicola <nicola@users.noreply.github.com>"]
 edition = "2018"
+license = "MIT OR Apache-2.0"
 
 [[bin]]
 name = "replication-game-server"
