--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ rand = "0.4"
 sapling-crypto = { git = "https://github.com/zcash-hackworks/sapling-crypto", branch = "master" }
 diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
 byteorder = "1.2.7"
+memmap = "0.7.0"
+tempfile = "3.0.5"
 
 [dependencies.pairing]
 version = "0.14.2"
