feat: integrate leaderboard UI
This PR integrates the leaderboard UI and mounts it at `/public/leaderboard`.

I was hoping to deploy it to IPFS and proxy it but I couldn't figure out how to do that in rocket...so here's an alternative...

We could alternatively deploy to IPFS, and setup CORS on `/leaderboard`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ features = ["expose-arith", "u128-support"]
 [dependencies.rocket_contrib]
 version = "0.4"
 default-features = false
-features = ["diesel_postgres_pool", "json"]
+features = ["diesel_postgres_pool", "json", "serve"]
 
 [dev-dependencies]
 parking_lot = "0.7.1"
