--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
 byteorder = "1.2.7"
 memmap = "0.7.0"
 tempfile = "3.0.5"
+flate2 = {version = "1.0.6", default-features = false, features = ["rust_backend"]}
 
 [dependencies.pairing]
 version = "0.14.2"
