fix(config): accept large json blobs, up to 1GB

--- a/Rocket.toml
+++ b/Rocket.toml
@@ -8,3 +8,5 @@ leaderboard = { url = "postgresql://fil@localhost/leaderboard_dev" }
 [production]
 address = "0.0.0.0"
 workers = 2
+# proofs are large, accept up to 1GB size
+limits = { json = 1073741824 }
