--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ rocket = "0.4"
 blake2 = "0.8.0"
 hex = "0.3.2"
 crypto-mac = "0.7.0"
-diesel = { version = "1.3", features = ["postgres", "r2d2"] }
+diesel = { version = "1.3", features = ["r2d2"] }
 diesel_migrations = "1.3"
 failure = "0.1"
 serde = { version = "1.0", features = ["derive"] }
@@ -27,7 +27,7 @@ serde_json = "1.0"
 clap = "2"
 slog = "2.4"
 rand = "0.4"
-diesel-derive-enum = { version = "0.4.4", features = ["postgres"] }
+diesel-derive-enum = "0.4.4"
 byteorder = "1.2.7"
 memmap = "0.7.0"
 tempfile = "3.0.5"
@@ -52,3 +52,7 @@ features = ["diesel_postgres_pool", "json", "serve"]
 [dev-dependencies]
 parking_lot = "0.7.1"
 lazy_static = "1.2.0"
+
+[features]
+default = ["postgres"]
+postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]
