--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ blake2 = "0.8.0"
 hex = "0.3.2"
 crypto-mac = "0.7.0"
 diesel = { version = "1.3", features = ["r2d2"] }
-diesel_migrations = "1.3"
+diesel_migrations = {version = "1.3", optional = true}
 failure = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -55,4 +55,4 @@ lazy_static = "1.2.0"
 
 [features]
 default = ["postgres"]
-postgres = ["diesel/postgres", "diesel-derive-enum/postgres"]
+postgres = ["diesel/postgres", "diesel-derive-enum/postgres", "diesel_migrations"]
