--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ paired = "0.15"
 
 diesel_migrations = {version = "1.3", optional = true}
 diesel-derive-enum = { version = "0.4.4", optional = true }
+reqwest = "0.9.18"
+ff = "0.4.0"
 
 [dependencies.filecoin-proofs]
 version = "0.3"
